--- a/data/eden/item_modifier/wawo/compass/set_components.json
+++ b/data/eden/item_modifier/wawo/compass/set_components.json
@@ -29,7 +29,8 @@
       },
       "!minecraft:food": {},
       "minecraft:rarity": "uncommon",
-      "!minecraft:custom_data": {}
+      "!minecraft:custom_data": {},
+      "!minecraft:use_remainder": {}
     }
   }
 ]
