--- a/data/eden/item_modifier/wawo/compass/set_components.json
+++ b/data/eden/item_modifier/wawo/compass/set_components.json
@@ -6,6 +6,7 @@
       "minecraft:consumable": {
         "consume_seconds": 0.05,
         "animation": "block",
+        "sound": "minecraft:entity.enderman.teleport",
         "has_consume_particles": false,
         "on_consume_effects": [
           {
